Fix photographer : Fix Like button squashing

--- a/scss/layouts/_medias.scss
+++ b/scss/layouts/_medias.scss
@@ -49,7 +49,6 @@
     }
   }
   &__likes {
-    width: 55px;
     justify-content: flex-end;
   }
   &__heart {
